tests/interpreter-anf/fail/021-slice-indexOOB.hyg
let arr1 = array(10, 3);
let arr2 = slice(arr1, 1, 20); ()
